Переместил cut-версию в data

--- a/task3/hw.ipynb
+++ b/task3/hw.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "data = pd.read_csv(\"adult_cut_1000.csv\", sep=';')"
+    "data = pd.read_csv(\"data/adult_cut_1000.csv\", sep=';')"
    ],
    "outputs": [],
    "metadata": {}
